[gd_scene load_steps=9 format=3 uid="uid://bt70ivt15wxlq"]

[ext_resource type="Texture2D" uid="uid://civsuy21pbsgd" path="res://icon.svg" id="1_echbf"]
[ext_resource type="Script" uid="uid://7lxdmkkld27l" path="res://scripts/manager.gd" id="1_ibiss"]
[ext_resource type="Script" uid="uid://isd1kyj5he1" path="res://scripts/UI/titlebar.gd" id="3_611at"]
[ext_resource type="Script" uid="uid://b3lmqs1ak36dy" path="res://scripts/UI/launcher_button.gd" id="3_c6dvc"]
[ext_resource type="Script" uid="uid://x0gys2lddqvx" path="res://scripts/UI/resize.gd" id="5_k24pf"]
[ext_resource type="Script" uid="uid://cxswu3q5dikhg" path="res://scripts/updater.gd" id="6_ygjfp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c6dvc"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_echbf"]
size = Vector2(30, 30)

[node name="Manager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ibiss")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 39.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 210

[node name="GamesList" type="Tree" parent="HSplitContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="GameView" type="ScrollContainer" parent="HSplitContainer"]
custom_minimum_size = Vector2(510, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/GameView"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="UpperArea" type="PanelContainer" parent="HSplitContainer/GameView/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HSplitContainer/GameView/VBoxContainer/UpperArea"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("1_echbf")
expand_mode = 1
stretch_mode = 6

[node name="LowerArea" type="PanelContainer" parent="HSplitContainer/GameView/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/GameView/VBoxContainer/LowerArea"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/GameView/VBoxContainer/LowerArea/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HighInfoPanel" type="PanelContainer" parent="HSplitContainer/GameView/VBoxContainer/LowerArea/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_c6dvc")

[node name="LeftAlign" type="HBoxContainer" parent="HSplitContainer/GameView/VBoxContainer/LowerArea/MarginContainer/VBoxContainer/HighInfoPanel"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 25

[node name="InstallArea" type="HBoxContainer" parent="HSplitContainer/GameView/VBoxContainer/LowerArea/MarginContainer/VBoxContainer/HighInfoPanel/LeftAlign"]
layout_mode = 2

[node name="InstallButton" type="Button" parent="HSplitContainer/GameView/VBoxContainer/LowerArea/MarginContainer/VBoxContainer/HighInfoPanel/LeftAlign/InstallArea"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/h_separation = 14
theme_override_constants/icon_max_width = 40
theme_override_font_sizes/font_size = 25
text = "Install"
icon = ExtResource("1_echbf")

[node name="InstallOptionsButton" type="Button" parent="HSplitContainer/GameView/VBoxContainer/LowerArea/MarginContainer/VBoxContainer/HighInfoPanel/LeftAlign/InstallArea"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/h_separation = 14
theme_override_constants/icon_max_width = 40
theme_override_font_sizes/font_size = 25
icon = ExtResource("1_echbf")

[node name="TimePlayedDisplay" type="HBoxContainer" parent="HSplitContainer/GameView/VBoxContainer/LowerArea/MarginContainer/VBoxContainer/HighInfoPanel/LeftAlign"]
layout_mode = 2
theme_override_constants/separation = 7

[node name="TextureRect" type="TextureRect" parent="HSplitContainer/GameView/VBoxContainer/LowerArea/MarginContainer/VBoxContainer/HighInfoPanel/LeftAlign/TimePlayedDisplay"]
layout_mode = 2
texture = ExtResource("1_echbf")
expand_mode = 3
stretch_mode = 5

[node name="Label" type="RichTextLabel" parent="HSplitContainer/GameView/VBoxContainer/LowerArea/MarginContainer/VBoxContainer/HighInfoPanel/LeftAlign/TimePlayedDisplay"]
layout_mode = 2
bbcode_enabled = true
text = "[font_size=23]Time Played
[font_size=20][color=gray]0h 0m"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="RightAlign" type="HBoxContainer" parent="HSplitContainer/GameView/VBoxContainer/LowerArea/MarginContainer/VBoxContainer/HighInfoPanel"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="InfoButton" type="Button" parent="HSplitContainer/GameView/VBoxContainer/LowerArea/MarginContainer/VBoxContainer/HighInfoPanel/RightAlign"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/h_separation = 14
theme_override_constants/icon_max_width = 40
theme_override_font_sizes/font_size = 25
icon = ExtResource("1_echbf")

[node name="FavoriteButton2" type="Button" parent="HSplitContainer/GameView/VBoxContainer/LowerArea/MarginContainer/VBoxContainer/HighInfoPanel/RightAlign"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/h_separation = 14
theme_override_constants/icon_max_width = 40
theme_override_font_sizes/font_size = 25
icon = ExtResource("1_echbf")

[node name="InfoPanel" type="PanelContainer" parent="HSplitContainer/GameView/VBoxContainer/LowerArea/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/GameView/VBoxContainer/LowerArea/MarginContainer/VBoxContainer/InfoPanel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/GameView/VBoxContainer/LowerArea/MarginContainer/VBoxContainer/InfoPanel/MarginContainer"]
layout_mode = 2

[node name="GameDescription" type="Label" parent="HSplitContainer/GameView/VBoxContainer/LowerArea/MarginContainer/VBoxContainer/InfoPanel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "Moving Out is a cooperative moving simulation game. In a local cooperative experience, players move objects from houses into a moving van while coping with exaggerated physics. 
It was followed by Moving Out 2."
autowrap_mode = 3

[node name="VFlowContainer" type="VFlowContainer" parent="HSplitContainer/GameView/VBoxContainer/LowerArea/MarginContainer/VBoxContainer/InfoPanel/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="TagsLabel" type="Label" parent="HSplitContainer/GameView/VBoxContainer/LowerArea/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Tags"

[node name="TagsPanel" type="PanelContainer" parent="HSplitContainer/GameView/VBoxContainer/LowerArea/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TagContainer" type="HFlowContainer" parent="HSplitContainer/GameView/VBoxContainer/LowerArea/MarginContainer/VBoxContainer/TagsPanel"]
layout_mode = 2

[node name="Titlebar" type="Panel" parent="." node_paths=PackedStringArray("resize_controls")]
custom_minimum_size = Vector2(0, 40)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 39.0
grow_horizontal = 2
script = ExtResource("3_611at")
resize_controls = NodePath("../Resizer")

[node name="MarginContainer" type="MarginContainer" parent="Titlebar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="LeftAlign" type="HBoxContainer" parent="Titlebar/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="MenuButton" type="MenuButton" parent="Titlebar/MarginContainer/LeftAlign"]
layout_mode = 2
theme_override_constants/icon_max_width = 30
text = "Doogler Launcher"
icon = ExtResource("1_echbf")
script = ExtResource("3_c6dvc")

[node name="SearchBar" type="LineEdit" parent="Titlebar/MarginContainer/LeftAlign"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="SortButton" type="MenuButton" parent="Titlebar/MarginContainer/LeftAlign"]
layout_mode = 2
text = " Sort "
flat = false

[node name="GroupButton" type="MenuButton" parent="Titlebar/MarginContainer/LeftAlign"]
layout_mode = 2
text = " Group "
flat = false

[node name="RightAlign" type="HBoxContainer" parent="Titlebar/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
alignment = 2

[node name="MinimizeButton" type="TextureButton" parent="Titlebar/MarginContainer/RightAlign"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
texture_normal = ExtResource("1_echbf")
texture_hover = SubResource("PlaceholderTexture2D_echbf")
ignore_texture_size = true
stretch_mode = 5

[node name="WindowedButton" type="TextureButton" parent="Titlebar/MarginContainer/RightAlign"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
texture_normal = ExtResource("1_echbf")
ignore_texture_size = true
stretch_mode = 5

[node name="ExitButton" type="TextureButton" parent="Titlebar/MarginContainer/RightAlign"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
texture_normal = ExtResource("1_echbf")
ignore_texture_size = true
stretch_mode = 5

[node name="Resizer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ResizeVerticalBottom" type="Control" parent="Resizer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
mouse_default_cursor_shape = 9
script = ExtResource("5_k24pf")
resize_direction = 1

[node name="ResizeVerticalTop" type="Control" parent="Resizer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
mouse_filter = 1
mouse_default_cursor_shape = 9
script = ExtResource("5_k24pf")
primary_side = true
resize_direction = 1

[node name="ResizeHorizontalRight" type="Control" parent="Resizer"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 10
script = ExtResource("5_k24pf")

[node name="ResizeHorizontalLeft" type="Control" parent="Resizer"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 10
script = ExtResource("5_k24pf")
primary_side = true

[node name="ResizeDiagonalBR" type="Control" parent="Resizer"]
custom_minimum_size = Vector2(8, 8)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 1
mouse_default_cursor_shape = 12
script = ExtResource("5_k24pf")
resize_direction = 2

[node name="ResizeDiagonalTR" type="Control" parent="Resizer"]
custom_minimum_size = Vector2(8, 8)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_bottom = 8.0
grow_horizontal = 0
mouse_filter = 1
mouse_default_cursor_shape = 11
script = ExtResource("5_k24pf")
primary_side = true
resize_direction = 2
diagonal_corner = 1

[node name="ResizeDiagonalBL" type="Control" parent="Resizer"]
custom_minimum_size = Vector2(8, 8)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_right = 8.0
grow_vertical = 0
mouse_filter = 1
mouse_default_cursor_shape = 11
script = ExtResource("5_k24pf")
primary_side = true
resize_direction = 2
diagonal_corner = 3

[node name="ResizeDiagonalTL" type="Control" parent="Resizer"]
custom_minimum_size = Vector2(8, 8)
layout_mode = 1
anchors_preset = 0
offset_right = 8.0
offset_bottom = 8.0
mouse_filter = 1
mouse_default_cursor_shape = 12
script = ExtResource("5_k24pf")
primary_side = true
resize_direction = 2
diagonal_corner = 2

[node name="Updater" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("6_ygjfp")

[node name="LoadingScreen" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.49803922)

[connection signal="pressed" from="Titlebar/MarginContainer/RightAlign/MinimizeButton" to="Titlebar" method="_on_minimize_button_pressed"]
[connection signal="pressed" from="Titlebar/MarginContainer/RightAlign/WindowedButton" to="Titlebar" method="_on_windowed_button_pressed"]
[connection signal="pressed" from="Titlebar/MarginContainer/RightAlign/ExitButton" to="Titlebar" method="_on_exit_button_pressed"]
